- updates templates to new style - adds posts for 2.0.0, 2.01 and 2.1.0

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,2 @@
 title: My Parent Record
-description: "The essential Google Sheets add-on for co-parenting."
-
-theme: null
+description: Your Truth. Secured.
